--- a/src/app/requests/requests-main/requests-main.component.html
+++ b/src/app/requests/requests-main/requests-main.component.html
@@ -6,7 +6,7 @@
 
     <mat-drawer-content>
 
-        <button mat-flat-button class="add_request" (click)="testprior()">Создать заявку</button>
+        <button mat-flat-button class="add_request" routerLink="/requests/add">Создать заявку</button>
         
         <mat-table [dataSource]="tasks">
 
@@ -36,13 +36,13 @@
             </ng-container>
 
             <mat-header-row *matHeaderRowDef="['priority', 'id', 'name', 'status', 'executorName']; sticky: true"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: ['priority', 'id', 'name', 'status', 'executorName']"></mat-row>
+            <mat-row *matRowDef="let request; columns: ['priority', 'id', 'name', 'status', 'executorName']" [routerLink]="['/requests/edit', request.id]"></mat-row>
         </mat-table>
 
     </mat-drawer-content>
 
     <mat-drawer mode="over" position="end" opened>
-        Lorem
+        <router-outlet></router-outlet>
     </mat-drawer>
 
 </mat-drawer-container>
