--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,7 @@ $menu_active_item_color: #002c49;
     font-weight: 200;
     & * {
       left: 50%;
-      transform: translate(-50%, 0%);
+      transform: translate(-50%);
       position: absolute;
     }
     & p {
