--- a/src/app/requests/requests-main/requests-main.component.html
+++ b/src/app/requests/requests-main/requests-main.component.html
@@ -47,8 +47,8 @@
 
     </div>
 
-    <div class="router_box">
-        <router-outlet></router-outlet>
+    <div class="router_box" [@routerAnimations]="isOpen(outlet) ? 'open' : 'closed'" >
+        <router-outlet #outlet="outlet" ></router-outlet>
     </div>
 
 </div>
