--- a/src/app/requests/requests-add/requests-add.component.html
+++ b/src/app/requests/requests-add/requests-add.component.html
@@ -1,5 +1,6 @@
 <div class="head">
   <h1>Новая заявка</h1>
+  <button routerLink="/requests"><img src="/assets/images/close.png"></button>
 </div>
 
 <div class="container">
@@ -8,4 +9,5 @@
   <p>Описание</p>
   <textarea class="description" #description_area (keyup)="description=description_area.value"></textarea>
   <button class="save" (click)="post(); name_area.value=''; description_area.value=''">Сохранить</button>
+  id: {{id}}
 </div>
