--- a/src/app/requests/requests-add/requests-add.component.scss
+++ b/src/app/requests/requests-add/requests-add.component.scss
@@ -1,15 +1,42 @@
 @import '../requests-style.scss';
 
 .head{
-    width: 100%;
     height: 60px;
     font-family: Myriad Pro, serif;
     font-size: 18px;
     background-color: #18436f;
     color: white;
-    padding: 0 36px;
+    padding: 0 31px;
     display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+    h1 {
+        padding-left: 5px;
+    }
+    button{
+        padding: 0;
+        top: auto;
+        bottom: auto;
+        border-bottom-width: 0;
+        box-sizing: border-box;
+        position: relative;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        cursor: pointer;
+        outline: 0;
+        border: none;
+        -webkit-tap-highlight-color: transparent;
+        display: inline-block;
+        overflow: visible;
+        background: none;
+        vertical-align: baseline;
+        img{
+            vertical-align: middle;
+        }
+    }
 }
 
 .container{
@@ -24,6 +51,7 @@
         line-height: 1.714;
     }
     & textarea{
+        overflow: auto;
         width: 625px;
         border: 1px solid #e8e8e8;
         border-radius: 5px;
