--- a/src/app/tasks/tasks-main/tasks-main.component.html
+++ b/src/app/tasks/tasks-main/tasks-main.component.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="form_box" *ngIf="formOpen" [@formAnimation]="formOpen">
-        <app-tasks-form [id]="taskId"></app-tasks-form>
+        <!-- <app-tasks-form [id]="taskId" (close)="setForm(0, false)"></app-tasks-form> -->
     </div>
 
 </div>
