--- a/src/app/tasks/tasks-main/tasks-main.component.scss
+++ b/src/app/tasks/tasks-main/tasks-main.component.scss
@@ -154,9 +154,10 @@ cdk-cell {
     box-sizing: border-box;
     background-color: #ecf3f7;
     top: 0;
-    right: -975px;
+    right: 0;
     bottom: 0;
     width: 975px;
+    transform: 'translateX(100%)';
     z-index: 150;
     box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.25);
     border-left: 1px solid rgb(215, 220, 224);
