--- a/src/app/tasks/tasks-form/tasks-form.component.html
+++ b/src/app/tasks/tasks-form/tasks-form.component.html
@@ -49,4 +49,8 @@
 			</div>
 		</div>
 	</ng-container>
+<!-- 
+	<div *ngSwitchDefault>
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tenetur cumque nostrum dicta, non quam culpa accusantium nam unde veniam et harum ipsam magni nemo illum commodi aspernatur aperiam delectus, omnis ducimus expedita facere ex. Dicta enim at harum quasi deserunt ipsam error commodi quia dolorem odit cum aliquid nulla sint necessitatibus, eius laboriosam. Quam ipsa nesciunt soluta voluptatibus?	
+	</div> -->
 </ng-container>
